apps/production/client-sites/laura-valentina-rincon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laura-valentina-rincon
  namespace: lulo-demo-landings
  labels:
    app: laura-valentina-rincon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laura-valentina-rincon
  template:
    metadata:
      labels:
        app: laura-valentina-rincon
        name: laura-valentina-rincon
    spec:
      containers:
      - name: laura-valentina-rincon
        image: "registry.yesidlopez.de/laura-valentina-rincon:v1.0.18" # {"$imagepolicy": "lulo-demo-landings:laura-valentina-rincon"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
        - name: registry-secret
