apps/production/client-sites/laura-valentina-rincon/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: laura-valentina-rincon
  name: laura-valentina-rincon
  namespace: lulo-demo-landings
spec:
  selector:
    app: laura-valentina-rincon
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
